--- a/src/components/ContentCopyMediaBlock/ContentCopyMediaBlock.module.css
+++ b/src/components/ContentCopyMediaBlock/ContentCopyMediaBlock.module.css
@@ -14,6 +14,7 @@
 
 .copyBlock {
   flex: 1;
+  order: 2;
   opacity: 0;
   transform: translateY(1rem);
   transition:
@@ -25,11 +26,16 @@
     transition:
       opacity 0.5s cubic-bezier(0.4, 0, 0.2, 1),
       transform 0.5s cubic-bezier(0.4, 0, 0.2, 1);
+
+    .contentCopyMediaBlock:not(.mediaLeft) & {
+      order: 1;
+    }
   }
 }
 
 .mediaBlock {
   flex: 2;
+  order: 1;
   overflow: hidden;
   opacity: 0;
   transform: translateY(1rem);
@@ -43,7 +49,11 @@
   }
 
   &.microdotBg {
-    padding: 1rem;
+    padding: 0.5rem;
+
+    @media (min-width: 768px) {
+      padding: 1rem;
+    }
   }
 
   @media (min-width: 900px) {
@@ -51,6 +61,9 @@
     transition:
       opacity 0.5s cubic-bezier(0.4, 0, 0.2, 1),
       transform 0.5s cubic-bezier(0.4, 0, 0.2, 1);
+    .contentCopyMediaBlock:not(.mediaLeft) & {
+      order: 2;
+    }
   }
 }
 
