--- a/src/components/VideoPlayer/VideoPlayer.module.css
+++ b/src/components/VideoPlayer/VideoPlayer.module.css
@@ -2,38 +2,19 @@
   position: relative;
   display: block;
   aspect-ratio: 16 / 9;
-}
 
-.container::before {
-  display: block;
-  padding-top: 56.25%; /* 16:9 aspect ratio */
-  content: ""; /* 16:9 aspect ratio */
-}
+  .player {
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: block;
+    width: 100%;
+    height: 100%;
+    aspect-ratio: 16 / 9;
 
-.player {
-  position: absolute;
-  top: 0;
-  left: 0;
-  display: block;
-  width: 100%;
-  height: 100%;
-  aspect-ratio: 16 / 9;
-}
-
-.videoPlayer {
-  position: relative;
-  display: block;
-  width: 100%;
-  aspect-ratio: 16 / 9;
-}
-
-.videoPlayer::before {
-  display: block;
-  padding-top: 56.25%; /* 16:9 aspect ratio */
-  content: ""; /* 16:9 aspect ratio */
-}
-
-.rounded {
-  overflow: hidden;
-  border-radius: 8px;
+    &.rounded {
+      overflow: hidden;
+      border-radius: 8px;
+    }
+  }
 }
